--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/styles.css">
+    <link rel="stylesheet" href="../velociraptorchik.github.io/styles/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <title>«АльфаТрансАвто» международные перевозки</title>
     <style>
         body{
@@ -13,14 +14,18 @@
     </style>
 </head>
 <body>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+    
     <div class="main">
         <header>
+
             <div class="menu">
                 <div class="menu-container">
+                    <a href="http://google.com">
                     <div class="box-header">
                         <div class="company"><label for="">компания</label></div>
                     </div>
+                    </a>
                     <div class="box-header">
                         <div class="autopark"><label for="">автопарк</label></div>
                     </div>
